Modified Rank, Suit and Cards to comply with project requirement Completed Abstract Hand class
Need to work on blackjack hand and cardcouthand classes

--- a/HW2CardGame/HW2CardGame.csproj
+++ b/HW2CardGame/HW2CardGame.csproj
@@ -41,6 +41,7 @@
     <Compile Include="Suit.cs" />
     <Compile Include="Card.cs" />
     <Compile Include="Deck.cs" />
+    <Compile Include="Hand.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
