--- a/HW2CardGame/HW2CardGame.csproj
+++ b/HW2CardGame/HW2CardGame.csproj
@@ -42,6 +42,9 @@
     <Compile Include="Card.cs" />
     <Compile Include="Deck.cs" />
     <Compile Include="Hand.cs" />
+    <Compile Include="CardCountHand.cs" />
+    <Compile Include="BlackJackHand.cs" />
+    <Compile Include="CardCountGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
