almost done... just need to work on blackjackgame rues for computer

--- a/HW2CardGame/HW2CardGame.csproj
+++ b/HW2CardGame/HW2CardGame.csproj
@@ -45,6 +45,7 @@
     <Compile Include="CardCountHand.cs" />
     <Compile Include="BlackJackHand.cs" />
     <Compile Include="CardCountGame.cs" />
+    <Compile Include="BlackJackGame.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="packages.config" />
